--- a/charts/diun/Chart.yaml
+++ b/charts/diun/Chart.yaml
@@ -21,3 +21,7 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 appVersion: 4.12.0
+
+maintainers:
+  - name: l0cs
+    email: l0cs@protonmail.com
