--- a/charts/diun/values.yaml
+++ b/charts/diun/values.yaml
@@ -41,6 +41,9 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
+persistence:
+  enabled: false
+
 podSecurityContext: {}
   # fsGroup: 2000
 
